--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-h1{
+h1 {
     color: #426696;
     font-weight: 600;
     font-size: 3rem;
@@ -12,19 +12,19 @@ h1{
 }
 
 h2,
-p{
+p {
     color: #658ec6;
     font-weight: 500;
     opacity: 0.8;
 }
 
-h3{
+h3 {
     color: #426696;
     font-weight: 600;
     font-size: 3rem;
 }
 
-main{
+main {
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
@@ -37,72 +37,68 @@ main{
     background: white;
     min-height: 80vh;
     width: 60%;
-    background: linear-gradient(
-        to right bottom,
-         rgba(255,255,255,0.7),
-          rgba(255,255,255,0.3));
+    background: linear-gradient(to right bottom,
+            rgba(255, 255, 255, 0.7),
+            rgba(255, 255, 255, 0.3));
     border-radius: 2rem;
     z-index: 2;
-    backdrop-filter: blur(2rem); 
+    backdrop-filter: blur(2rem);
     display: flex;
 }
 
-.circle1, .circle2{
+.circle1,
+.circle2 {
     background: white;
-    background: linear-gradient(
-        to right bottom,
-         rgba(255,255,255,0.8),
-          rgba(255,255,255,0.3)
-    );
+    background: linear-gradient(to right bottom,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.3));
     height: 20rem;
     width: 20rem;
     position: absolute;
     border-radius: 50%;
 }
 
-.circle1{
-    top:5%;
+.circle1 {
+    top: 5%;
     right: 15%;
-    
+
 }
 
-.circle2{
+.circle2 {
     bottom: 5%;
     left: 10%;
-    
+
 }
 
-.dashboard{
+.dashboard {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
-    background: linear-gradient(
-        to right bottom,
-         rgba(255,255,255,0.8),
-          rgba(255,255,255,0.3)
-    );
+    background: linear-gradient(to right bottom,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.3));
     border-radius: 2rem;
 }
 
-.link{
+.link {
     display: flex;
     margin: 2rem 0rem;
     padding: 1rem 5rem;
     align-items: center;
 }
 
-.link h2{
+.link h2 {
     padding: 0rem 2rem;
 }
 
-.games{
+.games {
     flex: 2;
 }
 
-.pro{
+.pro {
     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
     border-radius: 2rem;
     color: white;
@@ -110,13 +106,13 @@ main{
     position: relative;
 }
 
-.pro img{
+.pro img {
     position: absolute;
     top: -10%;
     right: 10%;
 }
 
-.pro h2{
+.pro h2 {
     width: 40%;
     color: white;
     font-weight: 600;
@@ -124,36 +120,32 @@ main{
 
 /* Games */
 
-.status{
+.status {
     margin-bottom: 3rem;
 }
 
 .status input {
-    background: linear-gradient(
-        to right bottom,
-         rgba(255,255,255,0.8),
-          rgba(255,255,255,0.3)
-    );
+    background: linear-gradient(to right bottom,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.3));
     border: none;
-    width:50%;
+    width: 50%;
     padding: 0.5rem;
     border-radius: 2rem;
 }
 
-.games{
+.games {
     margin: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
-.card{
+.card {
     display: flex;
-    background: linear-gradient(
-        to left top,
-         rgba(255,255,255,1),
-          rgba(255,255,255,0.8)
-    );
+    background: linear-gradient(to left top,
+            rgba(255, 255, 255, 1),
+            rgba(255, 255, 255, 0.8));
     border-radius: 1rem;
     margin: 2rem 0rem;
     padding: 2rem;
@@ -163,7 +155,7 @@ main{
 
 .progress {
     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
-    width:100%;
+    width: 100%;
     height: 25%;
     border-radius: 1rem;
     position: relative;
@@ -174,18 +166,18 @@ main{
     content: "";
     width: 100%;
     height: 100%;
-    background: rgb(236,236,236);
+    background: rgb(236, 236, 236);
     position: absolute;
     left: 60%;
 }
 
-.card-info{
+.card-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.percentage{
+.percentage {
     font-weight: bold;
     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
     -webkit-background-clip: text;
